feat: make placed Modal trajectories the optimized SDK default (#234)
